--- a/Agenda/index.html
+++ b/Agenda/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <div id="app">
-        <ul id="job"></ul>
-        <ul id="time"></ul>
+        <ul></ul>
         <input id="job" type="text" placeholder="Adicione uma tarefa"></input>
         <input id="time" type="text" placeholder="Informe o horário"></input>
         <button>Adicione</button>
-        <script scr='Tarefas_agenda'></script>
+        <script src='Tarefas_agenda.js'></script>
     </div>
 </body>
 </html>
